<resources>
    <string name="app_name">Luxury</string>
    //splash
    <string name="welcome">Xin Chào</string>
    <string name="internet_error">Kiểm tra lại kết nối mạng</string>
    //signIn
    <string name="title">Đăng Nhập</string>
    <string name="not_have_account">Chưa có tài khoản? Đăng Ký</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="sign_in">Đăng Nhập</string>
    <string name="login_error">Đăng Nhập Thất Bại</string>
    <string name="login_success">Đăng Nhập Thành Công</string>
    <string name="remember_me">Nhớ đến tôi!</string>
    <string name="need_help">Cần giúp đỡ!</string>
    <string name="denied_permission">Nếu bạn không cấp quyền này chúng tôi sẽ không thể giúp bạn kết nối với mọi người được</string>
    <string name="number">5</string>
    <string name="hi_there">Chào Đằng Ấy</string>
    <string name="permission_denied">Quyền chưa được cấp</string>
    <string name="go_to_setting">Đi đến cài đặt</string>
    <string name="cancel">Hủy</string>

    //signUp
    <string name="sign_up">Đăng Ký</string>
    <string name="have_account">Đã có tài khoản? Quay lại</string>
    <string name="email_password_valid">Giá trị bạn nhập không đúng hoặc không đủ 10 kí tự</string>
    <string name="username">Tên Người Dùng</string>
    <string name="usernamed">Địa Chỉ</string>
    <string name="add_successfully">Thêm Thành Công</string>
    <string name="failed">Lỗi Khi Tạo Tài Khoản</string>
    <string name="name">Tên người dùng (10 kí tự)</string>
    <string name="user_name">Tên Đăng Nhập (10 kí tự)</string>

    //home
    <string name="detail">Chi tiết</string>
    <string name="booking">Đặt Phòng</string>
    <string name="home_stay_follow_city">Homestay theo thành phố</string>
    <string name="home_stay_hot">Homestay hot nhất</string>
    <string name="home_stay_price">Homestay giá tốt nhất</string>
    <string name="favorite">Homestay Yêu thích</string>
    <string name="social_network">Mạng xã hội</string>
    <string name="intro">Thông tin người dùng</string>
    <string name="logout">Đăng xuất</string>
    <string name="search">Tìm Kiếm</string>
    <string name="validate">Nhập đủ dữ liệu</string>
    <string name="hint_search">Tìm kiếm theo thành phố (Đà lạt, TPHCM, Hà Nội)</string>
    <string name="price_km">Giá khuyến mãi</string>
    <string name="price_ago">Giá cũ</string>
    <string name="name_hs">Tên Homestay: </string>
    <string name="addressHs">Địa Chỉ Homestay: </string>
    <string name="detail_hs">Chi tiết :  </string>
    <string name="has_tag_home_stay">Hastag:  </string>
    <string name="price">Giá Homestay: </string>
    <string name="mo_ta">Mô tả Homestay: </string>
    <string name="rating">Đánh Giá: </string>
    <string name="luxury_post">Đăng bài </string>
    <string name="choose_image">Chọn ảnh </string>
    <string name="add_favorite_success">Thêm Yêu Thích </string>
    <string name="add_favorite_failed">Không thể thêm yêu thích </string>
    <string name="new_feed">Bảng tin </string>
    <string name="story_post">Đăng tin của bạn </string>
    <string name="error">Đã xảy ra lỗi</string>
    <string name="convert_to_dark_themes">Chế độ ban đêm</string>
    <string name="user_get">Chào mừng</string>
    <string name="image_detail">Một số hình ảnh của HomeStay</string>

    //booking
    <string name="date_start">Ngày đến</string>
    <string name="date_end">Ngày đi</string>
    <string name="count_member">Số lượng người</string>
    <string name="format_date">dd/mm/yyyy</string>
    <string name="booking_success">Đặt phòng thành công</string>
    <string name="booking_failed">Đặt phòng thất bại</string>
    <string name="date_valid">Ngày được lấy đang nhỏ hơn ngày hiện tại</string>
    <string name="validate_booking">Nhập đủ giá trị</string>
    <string name="select_name_hs">Lựa chọn homestay tại màn hình chính</string>
    <string name="select_address_hs">Lựa chọn địa chỉ homestay tại màn hình chính</string>
    <string name="size_null">Danh sách đặt phòng hiện đang trống</string>
    <string name="list_booking">Danh sách đặt phòng </string>
    <string name="todo">TODO</string>
    <string name="notification">Một người bạn vừa chia sẻ một địa điểm du lịch</string>
    <string name="booking_error">Kiểm tra kết nối mạng hoặc nhập đủ giá trị</string>
    <string name="delete_success">Xóa thành công</string>
    <string name="delete_error">Đã xảy ra lỗi khi xóa</string>

    //intro
    <string name="next">TIẾP</string>
    <string name="skip">BỎ QUA</string>
    <string name="start">ĐÃ HIỂU</string>

    <string name="slide_1_title">Xin chào</string>
    <string name="slide_1_desc">Chúng tôi đem đến một sản phẩm mới</string>

    <string name="slide_2_title">Đặt phòng Homestay</string>
    <string name="slide_2_desc">Đặt phòng nhanh chóng tiện lợi</string>

    <string name="slide_3_title">Homestay</string>
    <string name="slide_3_desc">Thông tin chi tiết cho từng Homestay !</string>

    <string name="slide_4_title">Kết nối</string>
    <string name="slide_4_desc">Chia sẻ địa điểm Homestay mà bạn biết!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="privacy">Bản quyền nghiêm cấm sao chép</string>
    <string name="version">1.1.0</string>

    //vinHomes
    <string name="vinHomes">VinHomes</string>

    //guide
    <string name="guide_title">Danh sách các Homestay được chúng tôi phổ biến đến bạn hằng ngày.</string>
    <string name="guide_article">Lựa chọn Homestay yêu thích qua các tiêu chí   + Giá Thành  + Địa điểm   +  Không gian  +  Phương tiên           - Khi bạn chọn được cho mình Homestay yêu thích thì tiến hành đặt phòng ngày bên dưới          - Chúng tôi giúp bạn lên lịch CheckIn, CheckOut và Số lượng người được thông báo đến chủ HomeStay          - Sau khi thực hiện đặt phòng thành công sẽ có cuộc gọi đến từ chủ Homestay nhằm xác định bạn có thực sự đặt phòng hay không          - Các Homestay chúng tôi lựa chọn đều là những Homestay uy tín</string>
    <string name="guide_payment">"         Thanh toán khi đến nhận phòng Homestay     "</string>
    <string name="guide_payment_article">"         Khi bạn nhận được cuộc gọi từ bên phía Chủ Homestay             Chủ Homestay sẽ xác nhận với bạn một lần nữa về việc CheckIn và CheckOut cũng như số lượng người           Chúng tôi cũng đảm bảo về tính đúng đắn khi nhận HomeStay     "</string>

    //social home
    <string name="title_header">Xin chào:  </string>
    <string name="title_content">Hãy xem mọi người đã chia sẻ những gì</string>
    <string name="select_post">Bạn Muốn ?</string>
    <string name="price_ago_1">giảm: </string>

    //need help
    <string name="need_help_title">Đăng ký tài khoản nhanh chóng</string>
    <string name="need_help_content">"Nếu bạn chưa có tài khoản,           vui lòng click vào dòng chữ Chưa có tài khoản? Đăng ký tài khoản bên dưới           để tiến hành việc đăng ký,sau đó bạn có thể quay trở lại đăng nhập mà không cần điền lại thông tin đăng nhập "</string>
    <string name="need_help_footer">Cảm ơn</string>
    <string name="download_success">Lưu thành công</string>
    <string name="password">Mật khẩu</string>
    <string name="selected_image">Chọn từ thư viện</string>
    <string name="take_photo">Chọn ảnh</string>
    <string name="take_image">Chụp ảnh</string>
    <string name="guide">Hướng dẫn sử dụng</string>
    <string name="_4_5">4.5</string>
    <string name="homestay_love">Bạn chưa có homestay yêu thích nào</string>
    <string name="booking_empty_list">Bạn chưa đặt phòng</string>
    <string name="filter">Lọc</string>
    <string name="comment">Viết Bài Đánh giá</string>
    <string name="c_c_nh_gi">Các đánh giá</string>
    <string name="t_n_ng_i_d_ng">Tên người dùng</string>


    <string-array name="price">
        <item>từ 1000000 trở xuống</item>
        <item>từ 5000000 trở xuống </item>
    </string-array>

    <string-array name="rating">
        <item>1 sao</item>
        <item>2 sao</item>
        <item>3 sao</item>
        <item>4 sao</item>
        <item>5 sao</item>
    </string-array>
</resources>
