<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/switch_black_white"
    tools:context=".ui.login.signin.SignInActivity">


    <EditText
        android:id="@+id/includeCountMember"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/robotocondensed_regular"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/includePassWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:background="@drawable/bg_edittext"
        android:fontFamily="@font/robotocondensed_regular"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:padding="10dp"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="@+id/includeCountMember"
        app:layout_constraintStart_toStartOf="@+id/includeCountMember"
        app:layout_constraintTop_toBottomOf="@+id/includeCountMember" />

    <Button
        android:id="@+id/btnLogin"
        style="@style/ButtonBackGround"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        android:text="@string/sign_in"
        app:layout_constraintStart_toStartOf="@+id/includePassWords"
        app:layout_constraintTop_toBottomOf="@+id/includePassWords" />

    <TextView
        android:id="@+id/tvNeedHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/robotocondensed_regular"
        android:paddingTop="10dp"
        android:text="@string/need_help"
        android:textColor="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@+id/includePassWords"
        app:layout_constraintTop_toTopOf="@+id/btnLogin"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/robotocondensed_regular"
        android:paddingTop="10dp"
        android:text="@string/not_have_account"
        android:textColor="?attr/switch_white_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        style="@style/TextViewBackground"
        android:textColor="?attr/switch_white_black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/hi_there"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarHomeStaysDetail" />




    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarHomeStaysDetail"
        style="@style/ToolbarBg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title"
        app:titleTextColor="?attr/switch_white_black" />
</androidx.constraintlayout.widget.ConstraintLayout>