<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/textView22"
        style="@style/TextViewBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/select_post"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:textColor="@color/md_white_1000"/>

    <LinearLayout
        android:id="@+id/ll_post_luxury"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_near_me_black_24dp"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            style="@style/TextViewBackgroundLight"
            android:text="@string/luxury_post"
            android:textColor="@color/md_white_1000"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_post_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <ImageView
            android:id="@+id/imageView14"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ic_near_me_red_24dp"
            android:contentDescription="@string/todo"/>

        <TextView
            android:id="@+id/textView21"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            style="@style/TextViewBackgroundLight"
            android:text="@string/story_post"
            android:textColor="@color/md_white_1000"/>
    </LinearLayout>
</LinearLayout>